ticket:1174 - Working top-level "test" and "integration" targets
 * Removed all references to org="omero-tools"
 * Added test-resolver to ivysettings.xml
 * Added test & integration targets to all builds
 * Refactored macros.xml into global.xml
 * Added or updated all test.xml files


git-svn-id: file:///home/svn/omero/trunk@3579 05709c45-44f0-0310-885b-81a1db45b4a6

--- a/build.xml
+++ b/build.xml
@@ -27,6 +27,10 @@
     <import file="../common.xml"/>
     <import file="../python.xml"/>
 
+    <target name="test" depends="python-test" unless="env.NOPYTHON"/>
+
+    <target name="integration" depends="python-integration" unless="env.NOPYTHON"/>
+
     <target name="tools-init" unless="env.NOPYTHON"/>
 
     <target name="tools-build" depends="tools-init" description="Creates all artifacts for tools/target" unless="env.NOPYTHON">
