OmeroBuild : Removal of dependencies.xml and other refactorings
 * Now using installIvy macro everywhere
 * Should be protected by an unless="x.done"
 * Renamed targets build-*, release-*, test-*
 * Refactored env.J out to global.xml
 * Better support for cleaning
 * Beginnings of dist/client and dist/blitz removal


git-svn-id: file:///home/svn/omero/trunk@3728 05709c45-44f0-0310-885b-81a1db45b4a6

--- a/build.xml
+++ b/build.xml
@@ -33,13 +33,9 @@
 
     <target name="tools-init" unless="env.NOPYTHON"/>
 
-    <target name="tools-build" depends="tools-init" description="Creates all artifacts for tools/target" unless="env.NOPYTHON">
-        <antcall target="python-build" inheritAll="true" inheritRefs="true"/>
-    </target>
+    <target name="tools-build" depends="tools-init,python-build" description="Creates all artifacts for tools/target" unless="env.NOPYTHON"/>
 
-    <target name="tools-dist" depends="tools-build" description="Copied artifacts to tools/target" unless="env.NOPYTHON">
-        <antcall target="python-install" inheritAll="true" inheritRefs="true"/>
-    </target>
+    <target name="tools-dist" depends="tools-build,python-install" description="Copied artifacts to tools/target" unless="env.NOPYTHON"/>
 
     <target name="tools-clean" depends="python-clean"/>
 
