Consistently use /v/bin/

--- a/tox.ini
+++ b/tox.ini
@@ -12,4 +12,4 @@ setenv =
     PYTHONPATH = {toxinidir}/target
 commands =
     python setup.py install
-    pytest {posargs:-n8 -m "not broken" -rf test/unit/clitest/ test/unit/fstest/ test/unit/gatewaytest/ test/unit/scriptstest/}
+    pytest {posargs:-n8 -m "not broken" -rf test}
