Fix docker build

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     pytest-sugar
     pytest-xdist
 setenv =
-    PYTHONPATH = {toxinidir}/target
+    PYTHONPATH = {toxinidir}/src
 commands =
     python setup.py install
     pytest {posargs:-n8 -m "not broken" -rf test}
