--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ deploy:
   provider: pypi
   user: $PYPI_USER
   password: $PYPI_PASSWORD
+  distributions: sdist bdist_wheel
   on:
     tags: true
     condition: "$TOX = no"
