--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,16 @@ matrix:
       env: TOX=py36
     - python: "3.6"
       env: TOX=no
+    - python: "3.6"
+      env: TOX=infra
 
 install:
   - |
     if [ "$TOX" = "no" ]; then
       pip install https://github.com/ome/zeroc-ice-py-manylinux/releases/download/0.1.0/zeroc_ice-3.6.5-cp36-cp36m-manylinux2010_x86_64.whl
       pip install restructuredtext-lint
+    elif [ "$TOX" = "infra" ]; then
+      git clone git://github.com/ome/omero-test-infra .omero
     else
       pip install tox
     fi
@@ -27,6 +31,8 @@ script:
       python setup.py sdist
       pip install dist/omero-dropbox*gz
       omero version
+    elif [ "$TOX" = "infra" ]; then
+      .omero/docker scripts
     else
       tox -e $TOX
     fi
