Remove xdist and sugar

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,6 @@ deps =
     future
     numpy
     pytest
-    pytest-sugar
-    pytest-xdist
     restructuredtext-lint
     py27: https://github.com/ome/zeroc-ice-py-manylinux/releases/download/0.1.0/zeroc_ice-3.6.5-cp27-cp27mu-manylinux2010_x86_64.whl
     py36: https://github.com/ome/zeroc-ice-py-manylinux/releases/download/0.1.0/zeroc_ice-3.6.5-cp36-cp36m-manylinux2010_x86_64.whl
@@ -23,4 +21,4 @@ passenv =
 commands =
     rst-lint README.rst
     python setup.py install
-    pytest {posargs:-n4 -m "not broken" -rf test}
+    pytest {posargs: -m "not broken" -rf test}
